Only set _JAVA_OPTIONS.